tket-hseries/src/llvm/snapshots/tket_hseries__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm14_15.snap
---
source: tket-hseries/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@"res_   spaces .F46B5D1D.0" = private constant [41 x i8] c"(USER:BOOL:   spaces   tabs\09\09\09newlines\0A\0A\0A"

define void @_hl.main.1(i1 %0) {
alloca_block:
  %"2_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, i1* %"2_0", align 1
  %"2_01" = load i1, i1* %"2_0", align 1
  %tag_len = load i8, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @"res_   spaces .F46B5D1D.0", i32 0, i32 0), align 1
  %tag_len2 = zext i8 %tag_len to i64
  call void @print_bool(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @"res_   spaces .F46B5D1D.0", i32 0, i32 0), i64 %tag_len2, i1 %"2_01")
  ret void
}

declare void @print_bool(i8*, i64, i1)
