tket-hseries/src/llvm/snapshots/tket_hseries__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm14_2.snap
---
source: tket-hseries/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_int.258C85C2.0 = private constant [18 x i8] c"\11USER:INT:test_int"

define void @_hl.main.1(i64 %0) {
alloca_block:
  %"2_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  %tag_len = load i8, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @res_test_int.258C85C2.0, i32 0, i32 0), align 1
  %tag_len2 = zext i8 %tag_len to i64
  call void @print_int(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @res_test_int.258C85C2.0, i32 0, i32 0), i64 %tag_len2, i64 %"2_01")
  ret void
}

declare void @print_int(i8*, i64, i64)
